# steering-resistance

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: paper_0.5b.yaml  paper_3b.yaml  paper_3b_local.yaml  qwen3b.yaml  qwen7b_popqa.yaml  smoke_0.5b.yaml  smoke_cpu.yaml
data/: concepts.json  concepts_paper.json  concepts_paper_small.json  qa.json  qa_open.json
docs/: CAPABILITY.md  HYPOTHESIS.md  LITERATURE.md  MOTIVATION.md  PRINCIPLES.md  PROJECT_LOG.md
notebooks/: colab_run.ipynb
results/paper_0.5b/: config.yaml  eval_m0.jsonl  eval_questions.json  invocations.jsonl  run_meta.json  summary.csv  summary.md  train_examples.json  vectors.pt
results/smoke/: code.patch  config.yaml  eval_m0.jsonl  eval_m1.jsonl  invocations.jsonl  run_meta.json  summary.csv  summary.md  train_examples.json  vectors.pt
results/smoke_cpu/: code.patch  eval_m0.jsonl  eval_m1.jsonl  eval_questions.json  invocations.jsonl  run_meta.json  summary.csv  summary.md  train_examples.json  vectors.pt
scripts/: eval_capability.py  fetch_run.py  gen_paper_concepts.py  index_experiments.py  pull_results.py  push_to_hub.py  run.py  verify_hooks.py
src/steer/: __init__.py  analysis.py  common.py  data.py  eval.py  hooks.py  hub.py  pipeline.py  tracking.py  train.py  vectors.py
tests/: test_capability.py  test_logic.py  test_tracking.py
