[project]
name = "steer"
version = "0.1.0"
description = "SFT training for resistance to adversarial activation steering"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "transformers>=5.0",
    "peft>=0.19",
    "accelerate>=1.0",
    "datasets>=3.0",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
