[project]
name = "steer"
version = "0.1.0"
description = "SFT training for resistance to adversarial activation steering"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "transformers>=5.0",
    "peft>=0.19",
    "accelerate>=1.0",
    "datasets>=3.0",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]
track = ["wandb>=0.19"]
capability = ["lm-eval>=0.4.5"]   # MMLU/GSM8K via lm-evaluation-harness (see docs/CAPABILITY.md)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
